fix: Adjust radar chart layout and dimensions for improved display on mobile devices

--- a/DH_P2.53/styles/styles.css
+++ b/DH_P2.53/styles/styles.css
@@ -7607,15 +7607,14 @@ body[data-page="research"] #secondary-header-row {
     
     .radar-chart-content {
         padding: 0;
-        min-height: 280px;
+        min-height: 310px;
     }
     
     #player-radar-canvas {
         max-width: 100%;
         max-height: 360px;
-        height: 280px !important;
+        height: 307px !important;
         padding: 0px 4px 0px 4px;
-
     }
     
     #game-logs-modal #modal-body #radar-chart-container {
